test/invalid_confs/mix_host_path.lua
--ERROR: can not mix Host and Path
Listen "8080" {
    Host "*" {
        echo = "host"
    },
	Path "/" {
		echo = "path"
	},
}
